[package]
name = "simulator"
version = "0.1.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
log = "0.4.11"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["uuid"] }
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde_json = "1.0.57"
