[package]
name = "acticks"
version = "0.1.0"
authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.0.1"
bdays = "0.1.1"
chrono = { version = "0.4.15", features = ["serde"] }
derive_more = "0.99.10"
futures = "0.3.5"
env_logger = "0.7.1"
log = "0.4.11"
reqwest = { version = "0.10.8", features = ["blocking"], optional = true}
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
serde_repr = "0.1.6"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded", "stream", "time"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
thiserror = "1.0.20"
websocket = { version = "0.26.2", optional = true }

[dev-dependencies]
actix-rt = "1"

[features]
polygon = ["reqwest", "websocket"]
